--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="header-wrapper" class="header-slider">
 		<header class="clearfix">
 			<div class="logo">
-				<img src="img/logo-image.png" alt="" />
+				<img src="img/logo-image.png" alt="logo" />
 			</div>
 			<div class="container">
 				<div class="row">
@@ -94,7 +94,7 @@
 					</div>
 					<div class="span6">
 						<div class="aligncenter">
-							<img src="img/icons/healthy.jpg" alt="" />
+							<img src="img/icons/healthy.jpg" alt="about" />
 						</div>
 					</div>
 				</div>
@@ -115,7 +115,7 @@
 						</blockquote>
 					</div>
 					<div class="span12 aligncenter flyRight">
-						<img src="img/icons/world.png" alt="" />
+						<img src="img/icons/world.png" alt="globe" />
 					</div>
 				</div>
 			</div>
@@ -317,7 +317,7 @@
 						</blockquote>
 					</div>
 					<div class="span12 aligncenter flyRight">
-							<img src="img/icons/dish.png" alt="" />
+							<img src="img/icons/dish.png" alt="leaf" />
 					</div>
 				</div>
 			</div>
