--- a/index.html
+++ b/index.html
@@ -343,21 +343,21 @@
 								<div class="row">
 									<div class="span6">
 										<div class="field your-name form-group">
-											<input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+											<input type="text" title = "name" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
 											<div class="validation"></div>
 										</div>
 										<div class="field your-email form-group">
-											<input type="text" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+											<input type="text" title = "email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
 											<div class="validation"></div>
 										</div>
 										<div class="field subject form-group">
-											<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+											<input type="text" title = "subject" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
 											<div class="validation"></div>
 										</div>
 									</div>
 									<div class="span6">
 										<div class="field message form-group">
-											<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+											<textarea class="form-control" title = "message" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
 											<div class="validation"></div>
 										</div>
 										<input type="submit" value="Send message" class="btn btn-theme pull-left">
