--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 			</div>
 			<!-- ./container -->
 		</footer>
-		<a href="#" alt="icon square" class="scrollup"><i class="icon-angle-up icon-square icon-bgdark icon-2x"></i></a>
+		<a href="#" class="scrollup" alt="icon square"><i class="icon-angle-up icon-square icon-bgdark icon-2x"></i>   </a>
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.scrollTo.js"></script>
 		<script src="js/jquery.nav.js"></script>
