--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 			</div>
 			<!-- ./container -->
 		</footer>
-		<a href="#" alt = "scroll icon"class="scrollup" alt = "scroll icon"><i class="icon-angle-up icon-square icon-bgdark icon-2x" alt = "scroll icon"></i>  alt = "scroll icon" </a>
+		<a href="#" alt = "scroll icon" class="scrollup" ><i class="icon-angle-up icon-square icon-bgdark icon-2x" ></i>  alt = "scroll icon" </a>
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.scrollTo.js"></script>
 		<script src="js/jquery.nav.js"></script>
