--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 		<!-- end spacer section -->
 		
 		<!-- section: contact -->
-		<section id="contact" class="section green">
+		<section id="contact" class="section white">
 			<div class="container">
 				<h4>We would love to hear from you!</h4>
 				<p>
