--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 						<div>
 							<h2>Health <strong>For All</strong></h2>
 							<p>
-								Either it be work, academics, or family, we often make sacrifices to our health to keep up with our busy schedules. It's difficult for many of us to plan healthy meals. It can be even harder for those with dietary needs. Our goal is to help everyone including those with dietary needs.
+								<h5>Either it be work, academics, or family, we often make sacrifices to our health to keep up with our busy schedules. It's difficult for many of us to plan healthy meals. It can be even harder for those with dietary needs. Our goal is to help everyone including those with dietary needs.</h5>
+								
 							</p>
 						</div>
 					</div>
@@ -328,10 +329,12 @@
 		<section id="contact" class="section white">
 			<div class="container">
 				<h4>We would love to hear from you!</h4>
-				<p>
-						Have any inquiries or suggestions about our website or recipes?
-						<br>Contact us below, we will be happy to assist you! 
+				<center>
+				<p><h5>Have any inquiries or suggestions about our website or recipes?
+					<br>Contact us below, we will be happy to assist you! </h5>
+						
 				</p>
+			</center>
 				<div class="blankdivider30">
 				</div>
 				<div class="row">
